--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,10 +23,99 @@
     <dependency><groupId>software.amazon.awssdk</groupId><artifactId>s3-transfer-manager</artifactId><version>${aws.sdk.version}</version></dependency>
     <dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><optional>true</optional></dependency>
     <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-test</artifactId><scope>test</scope></dependency>
-  </dependencies>
+    <dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct</artifactId>
+    <version>1.5.5.Final</version>
+  </dependency>
+  <dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct-processor</artifactId>
+    <version>1.5.5.Final</version>
+    <scope>provided</scope>
+  </dependency>
+</dependencies>
   <build>
     <plugins>
       <plugin><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId></plugin>
-    </plugins>
+      <plugin>
+    <groupId>com.diffplug.spotless</groupId>
+    <artifactId>spotless-maven-plugin</artifactId>
+    <version>2.43.0</version>
+    <configuration>
+      <java>
+        <googleJavaFormat/>
+        <removeUnusedImports/>
+      </java>
+    </configuration>
+    <executions>
+      <execution>
+        <phase>verify</phase>
+        <goals><goal>check</goal></goals>
+      </execution>
+    </executions>
+  </plugin>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-checkstyle-plugin</artifactId>
+    <version>3.3.1</version>
+    <configuration>
+      <configLocation>google_checks.xml</configLocation>
+      <consoleOutput>true</consoleOutput>
+      <failsOnError>true</failsOnError>
+    </configuration>
+    <executions>
+      <execution>
+        <phase>verify</phase>
+        <goals><goal>check</goal></goals>
+      </execution>
+    </executions>
+  </plugin>
+  <plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.11</version>
+    <executions>
+      <execution>
+        <goals>
+          <goal>prepare-agent</goal>
+        </goals>
+      </execution>
+      <execution>
+        <id>report</id>
+        <phase>prepare-package</phase>
+        <goals>
+          <goal>report</goal>
+        </goals>
+      </execution>
+      <execution>
+        <id>jacoco-check</id>
+        <phase>verify</phase>
+        <goals>
+          <goal>check</goal>
+        </goals>
+        <configuration>
+          <rules>
+            <rule>
+              <element>BUNDLE</element>
+              <limits>
+                <limit>
+                  <counter>LINE</counter>
+                  <value>COVEREDRATIO</value>
+                  <minimum>0.70</minimum>
+                </limit>
+                <limit>
+                  <counter>BRANCH</counter>
+                  <value>COVEREDRATIO</value>
+                  <minimum>0.60</minimum>
+                </limit>
+              </limits>
+            </rule>
+          </rules>
+        </configuration>
+      </execution>
+    </executions>
+  </plugin>
+</plugins>
   </build>
 </project>
